# hybrid_django_react

./: .gitignore  .tool-versions  README.md
backend/: pyproject.toml
backend/accounts/: models.py  serializers.py  urls.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/config/: settings.py  urls.py
backend/todolist/: leg_settings.py  models.py  serializers.py  settings.py  urls.py  views.py
backend/todolist/migrations/: 0001_initial.py
frontend/: package.json
frontend/src/: App.tsx  api.ts  store.ts  userSlice.ts  userTodosSlice.ts
