[project]
name = "todolist"
version = "0.1.0"
description = "hybrid django react exc"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "waitress (>=3.0.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
