[project]
name = "todolist"
version = "0.1.0"
description = "hybrid django react exc"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "django (>=5.1.5,<6.0.0)",
    "waitress (>=3.0.2,<4.0.0)",
    "django-cors-headers (>=4.6.0,<5.0.0)",
    "pip (>=24.3.1,<25.0.0)",
    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
    "django-filter (>=24.3,<25.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
